Updated Diary object class

--- a/res/layout/diary_layout.xml
+++ b/res/layout/diary_layout.xml
@@ -3,5 +3,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     
+    <TextView
+        android:id="@+id/DiaryBanner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="15dp"
+        android:text="@string/diary" />
+    
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/DiaryBanner"
+        android:layout_above="@+id/back"
+        android:divider="#57DA95"
+    	android:dividerHeight="4dp">
+    </ListView>
+
+    <Button
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="@string/back"
+        android:background="@drawable/custom_button_green" />
 
 </RelativeLayout>
