Working on DiaryLog and Entry view

--- a/res/layout/diary_layout.xml
+++ b/res/layout/diary_layout.xml
@@ -28,10 +28,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:text="@string/back"
-        android:background="@drawable/custom_button_green" />
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="14dp"
+        android:background="@drawable/custom_button_green"
+        android:text="@string/back" />
 
 </RelativeLayout>
