--- a/res/layout/profile_page.xml
+++ b/res/layout/profile_page.xml
@@ -137,6 +137,15 @@
      android:layout_below="@+id/jsaProgress"  
      android:layout_marginTop="10dp"  
      android:visibility="gone" > 
+     
+    <!--   <Button  
+     android:id="@+id/btn_save"  
+     android:layout_width="wrap_content"  
+     android:layout_height="wrap_content"  
+     android:layout_centerHorizontal="true"
+     android:layout_marginBottom="10dp"  
+     android:text="Save"  
+     android:textSize="25dp" />  -->
  
  <!--<TextView
      android:id="@+id/workHours"
