--- a/res/layout/profile_page.xml
+++ b/res/layout/profile_page.xml
@@ -109,16 +109,7 @@
      android:layout_alignBottom="@id/pb_horizontal" 
      android:background="@android:color/transparent"  
      android:gravity="center"/>  
- 
-  <Button  
-     android:id="@+id/btn_go"  
-     android:layout_width="wrap_content"  
-     android:layout_height="wrap_content"  
-     android:layout_alignParentRight="true"  
-     android:layout_below="@id/pb_horizontal"  
-     android:layout_marginTop="10dp"  
-     android:text="Go"  
-     android:textSize="25dp" />  
+  
 
   <TextView
      android:id="@+id/jsaProgress"
@@ -130,6 +121,16 @@
      android:layout_marginTop="20dp"
      android:text="@string/jsaProgress" />
   
+       <Button  
+     android:id="@+id/btn_save"  
+     android:layout_width="wrap_content"  
+     android:layout_height="wrap_content"
+     android:layout_alignParentBottom="true"  
+     android:layout_centerHorizontal="true"
+     android:layout_marginBottom="20dp"  
+     android:text="Save"  
+     android:background="@drawable/custom_button_green" />
+       
  <RelativeLayout  
      android:id="@+id/rl_progress_bar_set"  
      android:layout_width="fill_parent"  
@@ -138,14 +139,7 @@
      android:layout_marginTop="10dp"  
      android:visibility="gone" > 
      
-    <!--   <Button  
-     android:id="@+id/btn_save"  
-     android:layout_width="wrap_content"  
-     android:layout_height="wrap_content"  
-     android:layout_centerHorizontal="true"
-     android:layout_marginBottom="10dp"  
-     android:text="Save"  
-     android:textSize="25dp" />  -->
+
  
  <!--<TextView
      android:id="@+id/workHours"
