Added functionality to add to progress bar when applying for jobs

--- a/res/layout/single_job_result.xml
+++ b/res/layout/single_job_result.xml
@@ -36,12 +36,34 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp" />
         
+         <View
+        android:id="@+id/view_Line_left"
+        android:layout_width="2dip"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="#57DA95"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
+         
+             <View
+        android:id="@+id/view_Line_right"
+        android:layout_width="2dip"
+        android:layout_height="fill_parent"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="#57DA95"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
+        
         <TextView
         android:id="@+id/bannerTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/view_Line1"
-         android:layout_marginTop="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="15dp"
         android:text="@string/title" />
@@ -50,7 +72,7 @@
         android:id="@+id/titleContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-         android:layout_below="@+id/view_Line1"
+        android:layout_below="@+id/view_Line1"
         android:layout_toRightOf="@+id/bannerTitle"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="15dp" />
