--- a/res/layout/diary_view.xml
+++ b/res/layout/diary_view.xml
@@ -147,6 +147,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/datePicker2"
         android:layout_below="@+id/textView2"
+        android:entries="@array/country_arrays"
         tools:listitem="@android:layout/simple_spinner_dropdown_item" />
 
     <Spinner
