--- a/res/layout/splash_layout.xml
+++ b/res/layout/splash_layout.xml
@@ -12,6 +12,6 @@
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/templogo" />
+        android:src="@drawable/dwp" />
     
 </RelativeLayout>
