--- a/res/layout/diary_layout.xml
+++ b/res/layout/diary_layout.xml
@@ -11,7 +11,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="15dp"
-        android:text="@string/diary" />
+        android:text="@string/diaryLog" />
     
     <ListView
         android:id="@android:id/list"
@@ -27,10 +27,79 @@
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/LinearLayoutNavBar"
         android:layout_marginLeft="14dp"
         android:background="@drawable/custom_button_green"
         android:text="@string/back" />
+    
+         <LinearLayout
+        android:id="@+id/LinearLayoutNavBar"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:baselineAligned="false"
+        android:background="@drawable/nav_highlight_rect"  >
+        
+
+
+	        <Button
+	            android:id="@+id/btn_Home_Menu"
+	            style="?android:attr/borderlessButtonStyle"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:drawableBottom="@drawable/home"
+	            android:layout_weight="2" />
+
+        
+	        
+	        <Button
+	            android:id="@+id/btnProfile"
+	            style="?android:attr/borderlessButtonStyle"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="bottom"
+	            android:drawableBottom="@drawable/profilelogo"
+	            android:layout_weight="2" />
+
+        
+	
+	        <Button
+	            android:id="@+id/btnSearch"
+	            style="?android:attr/borderlessButtonStyle"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="bottom"
+	            android:drawableBottom="@drawable/searchlogo"
+	            android:layout_weight="2" />
+	        
+
+
+	        <Button
+	            android:id="@+id/btnDiary"
+	            style="?android:attr/borderlessButtonStyle"
+				android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+	            android:layout_gravity="bottom"
+	            android:drawableBottom="@drawable/diarylogo"
+	            android:layout_weight="2" />
+        
+
+	
+	        <Button
+	            android:id="@+id/btnSaved"
+	            style="?android:attr/borderlessButtonStyle"
+	            android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+	            android:layout_gravity="bottom"
+	            android:drawableBottom="@drawable/savedlogo"
+	            android:layout_weight="2" />
+	        
+        
+    </LinearLayout>
+    
+    
+    
 
 </RelativeLayout>
